# another-ai-plus-rss-reader

./: .gitignore  CHANGELOG.md  CLAUDE.md  GETTING_STARTED.md  README.md  README.zh.md  config.yaml  config.yaml.example  error.txt  feeds.yaml  feeds.yaml.example  filters.yaml  filters.yaml.example  package-lock.json  pyproject.toml  reader.py
.firecrawl/: gemini-json-mode-notes.md
dashboard/: app.py  templates.py
dashboard/routes/: articles.py  feeds.py  filters.py  query.py  settings.py  stats.py
docs/: database_schema.md  develop.md
docs/research/: extraction_comparison_report.md
docs/superpowers/specs/: 2026-03-18-ainewreader-design.md  2026-03-28-settings-stats-improvements-design.md
hub/: README.md
output/: scraped_2026-03-27.md
scripts/: audition_extraction.py  clean_db.py  delete_orphaned_articles.py  delete_source.py  sync_feeds_cleanup.py
src/aiNewReader/: auditor.py  classifier.py  cleaner.py  cli.py  config.py  db.py  dedup.py  embeddings.py  extractor.py  feedback.py  fetcher.py  filter.py  health.py  renderer.py  reporter.py
src/aiNewReader/delivery/: email.py  telegram.py
src/aiNewReader/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  ollama.py
src/aiNewReader/rag/: query.py  store.py
templates/: digest.md.j2
templates/dashboard/: _feed_row.html  _query_results.html  article_detail.html  articles.html  base.html  feeds.html  filters.html  index.html  query.html  reports.html  settings.html  stats.html
